<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WarppingActivity">

    <!-- for the multilanguage icon-->
    <LinearLayout
        android:id="@+id/language_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/text_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/icon_language"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_language"
            android:layout_gravity="end"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Title LinearLayout (Container for the two lines) -->
    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="80dp"
        android:paddingBottom="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- First Line -->
        <TextView
            android:id="@+id/discover_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Discover"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#F44B3E"/>

        <!-- Second Line -->
        <TextView
            android:id="@+id/shanghai_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shanghai With Us!"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"/>
    </LinearLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Tourist Places Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/card_tourist"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/tourist_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/tourist_places"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Restaurants Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/card_restaurants"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/restaurant_bckg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/restaurants"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Gardens Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/card_gardens"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/garden_bckg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/gardens"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Hotels Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/card_hotels"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/hotels_bckg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/hotels"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>